Adjust css to tailwind

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,3 +3,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn {
+  @apply px-3 py-2 mt-1.5 text-sm rounded-md border-none transition-all duration-500 ease-out cursor-pointer;
+}
