--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,7 @@
 /* @import './base.css'; */
 
+@import 'https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
