--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,6 @@
 /* @import './base.css'; */
 
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import 'https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css';
 
 @tailwind base;
